@@ -1,3 +1,8 @@
+2013-03-13  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* unix/tcl.m4: Patch by Andrew Shadura, providing better support for
+	three architectures they have in Debian.
+
 2013-01-16  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/Makefile.in: Don't compile Tk with -DTCL_NO_DEPRECATED by default
